--- a/src/scss/_page-content.scss
+++ b/src/scss/_page-content.scss
@@ -14,10 +14,10 @@
     }
   }
 
-//   .section {
-//     padding-top: 0;
-//     padding-bottom: 0;
-//   }
+  .section {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
   h2 {
     margin-bottom: 15px;
